@@ -4,16 +4,17 @@ import com.auth0.jwt.interfaces.DecodedJWT;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.concord.backend.config.jwt.JwtTokenUtil;
-import org.concord.backend.dal.model.postgres.Follow;
-import org.concord.backend.dal.model.postgres.FollowId;
-import org.concord.backend.dal.model.postgres.Like;
-import org.concord.backend.dal.model.postgres.User;
+import org.concord.backend.dal.model.postgres.*;
 import org.concord.backend.dal.postgres.repository.FollowRepository;
 import org.concord.backend.dal.postgres.repository.LikeRepository;
+import org.concord.backend.dal.postgres.repository.UserPPRepository;
 import org.concord.backend.dal.postgres.repository.UserRepository;
+import org.concord.backend.dto.request.UserUpdateRequest;
 import org.concord.backend.dto.response.UserResponse;
 import org.concord.backend.dto.response.UserShortResponse;
+import org.concord.backend.exceptions.http.HttpBadRequestException;
 import org.concord.backend.mapper.UserMapper;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -28,19 +29,32 @@ public class UserService {
     private final FollowRepository followRepository;
     private final LikeRepository likeRepository;
     private final JwtTokenUtil jwtTokenUtil;
+    private final PasswordEncoder passwordEncoder;
+    private final UserPPRepository userPPRepository;
 
     public List<UserResponse> getAllUsers() {
         return userRepository.findAll().stream()
-                .map(UserMapper::toResponse)
-                .collect(Collectors.toList());
+                .map(user -> {
+                    String userPPUrl = userPPRepository.findByUser(user)
+                            .orElse(new UserPP(user, "https://concord-images.s3.eu-north-1.amazonaws.com/init/PPinit.webp"))
+                            .getProfilePictureUrl();
+                    return UserMapper.toResponse(user, userPPUrl);
+                })
+                .toList();
     }
 
     public UserResponse getUserById(Long id) {
         return userRepository.findById(id)
-                .map(UserMapper::toResponse)
+                .map(user -> {
+                    String userPPUrl = userPPRepository.findByUser(user)
+                            .orElse(new UserPP(user, "https://concord-images.s3.eu-north-1.amazonaws.com/init/PPinit.webp"))
+                            .getProfilePictureUrl();
+                    return UserMapper.toResponse(user, userPPUrl);
+                })
                 .orElseThrow();
     }
 
+    @Transactional(readOnly = true)
     public User getCurrentUserFromToken(String token) {
         DecodedJWT jwt = jwtTokenUtil.decodeToken(token);
         Long userId = Long.valueOf(jwt.getClaim("id").asString());
@@ -50,9 +64,9 @@ public class UserService {
 
     public void follow(Long followerId, Long followeeId) {
         User follower = userRepository.findById(followerId)
-                .orElseThrow(() -> new RuntimeException("Follower not found"));
+                .orElseThrow(() -> new HttpBadRequestException("Follower not found"));
         User followee = userRepository.findById(followeeId)
-                .orElseThrow(() -> new RuntimeException("Followee not found"));
+                .orElseThrow(() -> new HttpBadRequestException("Followee not found"));
 
         FollowId id = new FollowId(followerId, followeeId);
         Follow follow = new Follow(id, follower, followee);
@@ -157,4 +171,45 @@ public class UserService {
                 .toList();
     }
 
+    @Transactional()
+    public User updateUser(Long id , UserUpdateRequest userUpdateRequest) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+
+        user.setUserTag(userUpdateRequest.getUserTag());
+        user.setEmail(userUpdateRequest.getEmail());
+        user.setDisplayName(userUpdateRequest.getDisplayName());
+        user.setPassword(passwordEncoder.encode(userUpdateRequest.getPassword()));
+        user.setPrivate(userUpdateRequest.getIsPrivate());
+
+        return userRepository.save(user);
+    }
+
+    public int getFollowersCount(Long id) {
+        return followRepository.countByFolloweeId(id);
+    }
+
+    public int getFollowingCount(Long id) {
+        return followRepository.countByFollowerId(id);
+    }
+
+    @Transactional(readOnly = true)
+    public boolean isFollowed(Long id, Long currentUserId) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        User currentUser = userRepository.findById(currentUserId)
+                .orElseThrow(() -> new RuntimeException("Current user not found"));
+
+        return followRepository.existsByFollowerAndFollowee(currentUser, user);
+    }
+
+    @Transactional(readOnly = true)
+    public boolean isFollowing(Long id, Long currentUserId) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        User currentUser = userRepository.findById(currentUserId)
+                .orElseThrow(() -> new RuntimeException("Current user not found"));
+
+        return followRepository.existsByFollowerAndFollowee(user, currentUser);
+    }
 }
